--- a/product-list.html
+++ b/product-list.html
@@ -23,7 +23,7 @@ function clearSession() {
 <div>
 	<h1>MyShop.com</h1>
 	<div>Everything just a click away. </div>
-	<div align="right" id="session"><a href="signup.html">Sign Up</a> | <a href="index.html">Login</a></div>
+	<div align="right" id="session"><a href="signup.html">Sign Up</a> | <a href="login.html">Login</a></div>
 </div>
 <hr style="border-top: 1px solid  #f2f2f2;"></hr>
 
