--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,7 @@
 	<div>
 		<h1>MyShop.com</h1>
 		<div>Everything just a click away. </div>
-		<div align="right" id="session"><a href="index.html">Login</a></div>
+		<div align="right" id="session"><a href="login.html">Login</a></div>
 	</div>
 <hr style="border-top: 1px solid  #f2f2f2;"></hr>
 <h3>Regsiter </h3>
