Adding product detail view functionality, login logout

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@ function clearSession() {
 					THUNGSTON BULB, 40W
 				</span>
 				<p>Rs. 950</p>
-				<button class="button-quick-view" onclick="window.location.href='/shops/deliveryProductPreview.jsp?id=kidstoy0Z1233'">
+				<a href="product-detail.html?id=2"><button class="button-quick-view">
 					<span>See Details</span>
-				</button>
+				</button></a>
 			</td>
 		</tr>
 		<tr class="container">
@@ -68,9 +68,9 @@ function clearSession() {
 					TENNIS BALL, DUNLOP, 155
 				</span>
 				<p>RS. 2,850</p>
-				<button class="button-quick-view" onclick="window.location.href='/shops/deliveryProductPreview.jsp?id=kidstoy0Z1233'">
+				<a href="product-detail.html?id=3"><button class="button-quick-view">
 					<span>See Details</span>
-				</button>
+				</button></a>
 			</td>
 		</tr>
 	</table>
