Linking home page to the seller page

--- a/seller.html
+++ b/seller.html
@@ -24,7 +24,7 @@ function clearSession() {
 	<div align="right" id="session"><a href="signup.html">Sign Up</a> | <a href="login.html">Login</a></div>
 </div>
 <hr style="border-top: 1px solid  #f2f2f2;"></hr>
-
+<div><a href="index.html"> Home</a></div><br
 <div>
 	<form onsubmit="seller();return false;">
 		<label for="company_name">Company Name</label>
