Fixing the login button name

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="css/main.css" rel="stylesheet">
 
-<title>Login</title>
+<title>Home</title>
 <script>
 function user() {
  var username = sessionStorage.getItem('user');
