--- a/login.html
+++ b/login.html
@@ -36,7 +36,7 @@ function login() {
     <label for="password">Password</label>
     <input type="password" id="password" name="password" placeholder="Enter password">
 
-	<input type="submit" id="submit" value="Submit">
+	<input type="submit" id="submit" value="Login">
    </form>
 </div>
 
