Adding compressed image to reduce latency

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ function clearSession() {
 		</tr>
 		<tr class="container">
 			<td>
-				<img style="height: 250px;width: 250px;" src="https://images.pexels.com/photos/577514/pexels-photo-577514.jpeg" class="the-cat hovered">
+				<img style="height: 250px;width: 250px;" src="https://images.pexels.com/photos/577514/pexels-photo-577514.jpeg?auto=compress&cs=tinysrgb&h=650&w=940 940w, https://images.pexels.com/photos/577514/pexels-photo-577514.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260 1260w, https://images.pexels.com/photos/577514/pexels-photo-577514.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940 1880w, https://images.pexels.com/photos/577514/pexels-photo-577514.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260 2520w" class="the-cat hovered">
 			</td>
 			<td style="padding: 20px;">
 				<span class="text-gray">
