Adding ids to html elements

--- a/buy.html
+++ b/buy.html
@@ -58,7 +58,7 @@ function getTotal(id) {
 				<label for="quantity">Quantity</label>
 				<input type="number" id="quantity1" name="quantity">
 				<a onclick="getTotal(1)">
-					<button class="button-quick-view">
+					<button class="button-quick-view" id="buy">
 						<span>Buy</span>
 					</button>
 				</a>
@@ -119,7 +119,7 @@ function getTotal(id) {
 	</table>
 	<div class="container" style="width: 1000px;">
 		<a href="shipping_details.html">
-			<button class="button-quick-view">
+			<button class="button-quick-view" id="checkout">
 				<span>Check Out</span>
 			</button>
 		</a>
