Adding ids for the product detail screen

--- a/product-detail.html
+++ b/product-detail.html
@@ -51,7 +51,7 @@ function clearSession() {
 					Compact and portable the RockJam 54 keyboard piano can be powered by either batteries and mains power (power supply included.) making it perfect for use both in the home and on the road</p>
 				<p>RS. 2,850</p>
 				<a href="buy.html?id=1"><button class="button-quick-view">
-					<span>Buy</span>
+					<span id="buy">Buy</span>
 				</button></a>
 			</td>
 		</tr>
